--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_URL=https://your-render-app-url.onrender.com/api
+VITE_API_URL=https://smart-reconciliation-audit-system-backend.onrender.com/api
